Adapted rize implementation
